feat(v26.2-Alpha.8): compatibility sweep, self-contained agent jar, KI-1
scripts/compat-sweep.ps1: repeatable 8-check matrix (stock Temurin 25 x
fork image) covering identity, module presence semantics, agent attach
tier expectations, and full Gradle suite per runtime. Result 0 FAIL.

Two contract-grade finds fixed:
- Sweep CWD bug resolved wrong settings.gradle (Push-Location)
- Stock attach of the embedded jar crashed at premain class-linking
  (NCDFE before any try/catch can run). New embedJar task builds a
  self-contained aprismate.jar (agent + api classes); stock JDKs now
  get FULL premain functionality instead of graceful degradation.
  Gradle 9 manifest API change handled via shared ext.agentManifest.

KI-1 documented (EN+ZH docs/12): fork feature()=26 on 25 internals
rejects cf70 emitted by tools keying off Runtime.version().feature()
(repro: global Gradle Kotlin init script). Sweep marks SKIP/KI-1;
resolution options queued for GA planning.